Bug fixed + test passed for DPLL