@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -26,12 +27,12 @@ class CNFTest {
         // Definition of CNF formula
         CNF cnf = new CNF(new ArrayList<>(Arrays.asList(clause1, clause2)));
         // Definition of truth assignements
-        TruthAssignment tau1 = new TruthAssignment(new ArrayList<>(List.of(q)));
-        TruthAssignment tau2 = new TruthAssignment(new ArrayList<>(List.of(p)));
-        TruthAssignment tau3 = new TruthAssignment(new ArrayList<>(Arrays.asList(p,q)));
-        TruthAssignment tau4 = new TruthAssignment(new ArrayList<>(Arrays.asList(p,r)));
-        TruthAssignment tau5 = new TruthAssignment(new ArrayList<>(List.of(r)));
-        TruthAssignment tau6 = new TruthAssignment(new ArrayList<>(Arrays.asList(q,r)));
+        TruthAssignment tau1 = new TruthAssignment(new HashSet<>(List.of(q)));
+        TruthAssignment tau2 = new TruthAssignment(new HashSet<>(List.of(p)));
+        TruthAssignment tau3 = new TruthAssignment(new HashSet<>(Arrays.asList(p,q)));
+        TruthAssignment tau4 = new TruthAssignment(new HashSet<>(Arrays.asList(p,r)));
+        TruthAssignment tau5 = new TruthAssignment(new HashSet<>(List.of(r)));
+        TruthAssignment tau6 = new TruthAssignment(new HashSet<>(Arrays.asList(q,r)));
         assertFalse(cnf.eval(tau1));
         assertFalse(cnf.eval(tau2));
         assertTrue(cnf.eval(tau3));
